Reworked NEI Plugin